apply plugin : 'java'
apply from: file('test-summary.gradle')

repositories {
  mavenCentral()
}

sourceCompatibility = 11
targetCompatibility = 11

def JUNIT_VERSION = '5.9.1'
def JACKSON_VERSION = '2.14.1'

dependencies {
  implementation(
    [ group: 'com.fasterxml.jackson.core',
      name: 'jackson-databind',
      version: JACKSON_VERSION ],
    [ group: 'com.fasterxml.jackson.core',
      name: 'jackson-annotations',
      version: JACKSON_VERSION ],
    [ group: 'org.json',
      name: 'json',
      version: '20220924' ]
  )

  testImplementation(
    [ group: 'org.junit.jupiter',
      name: 'junit-jupiter-engine',
      version: JUNIT_VERSION ],
    [ group: 'org.junit.jupiter',
      name: 'junit-jupiter-params',
      version: JUNIT_VERSION ],
    [ group: 'io.rest-assured',
      name: 'rest-assured',
      version: '5.3.0' ],
  )
}

test {
  useJUnitPlatform()
}

tasks.withType(Test) { Test task ->
  task.useJUnitPlatform { JUnitPlatformOptions options ->
    if (project.hasProperty("includeTags"))
      options.includeTags project.getProperty("includeTags").split(',')

    if (project.hasProperty("excludeTags"))
      options.excludeTags project.getProperty("excludeTags").split(',')
  }
}
